fix disable button cursor on mobile

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -459,9 +459,8 @@ margin-top:20px;
  
  }
  
- /* prevent ugly click boxes on mobile chrome */
  
-  @media handheld, only screen and (max-width: 885px) and (min-device-pixel-ratio: 1.3), only screen and (max-device-width: 885px) and (-webkit-min-device-pixel-ratio: 1.3){
-  a.linkButton, .charbut, div.options button, #saveOptions input[type="submit"], .boxy, .butty {cursor:default}
+  @media handheld, (max-width: 885px) and (min-device-pixel-ratio: 1.3), (max-width: 885px) and (-webkit-min-device-pixel-ratio: 1.3) {
+  a.linkButton, .charbut, div.options button, #saveOptions input[type="submit"], .boxy, .butty {cursor:default !important;}
   a.linkButton:active, #saveOptions input[type="submit"]:active, div.options button:active {background:#797979}
   }
